# okrunit-backup

./: .gitignore  CLAUDE.md  PLAN.md  UI_CHANGES_SUMMARY.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.claude/: settings.json
.github/workflows/: auto-pr.yml  backup-mirror.yml  backup-on-merge.yml  ci.yml  sync-dev.yml
e2e/: auth.spec.ts  billing.spec.ts  dashboard-ui-simple.spec.ts  dashboard-ui.spec.ts  desktop-landing.spec.ts  docs-screenshots.spec.ts  docs.spec.ts  feature-test.spec.ts  landing-full.spec.ts  landing-mobile.spec.ts  landing.spec.ts  make-reference.spec.ts  mobile-screenshots.spec.ts  navigation-perf.spec.ts  notification-debug.spec.ts  onboarding-tour.spec.ts  product-screenshots.spec.ts  realtime-debug.spec.ts  ui-changes-verification.spec.ts
integrations/autogen/: README.md  pyproject.toml
integrations/autogen/okrunit_autogen/: __init__.py  tool.py
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/okrunit_crewai/: __init__.py  tool.py
integrations/dagster/: README.md  __init__.py  jobs.py  ops.py  pyproject.toml  resources.py  sensors.py  test_resources.py
integrations/github-actions/: README.md  action.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/okrunit_langchain/: __init__.py  tool.py
integrations/make/: README.md  base.json  package-lock.json  package.json
integrations/monday/: README.md  base.json  package.json
integrations/n8n/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
integrations/netlify/: README.md  manifest.yml  package.json  tsconfig.json
integrations/pipedream/: README.md  package-lock.json  package.json  tsconfig.json
integrations/power-automate/: README.md  apiDefinition.swagger.json  apiProperties.json
integrations/prefect/: README.md  __init__.py  flows.py  pyproject.toml  tasks.py  test_tasks.py
integrations/retool/: README.md  package.json  tsconfig.json
integrations/shared/: constants.ts  module-specs.md
integrations/teams-app/: README.md  manifest.json
integrations/temporal/: README.md  __init__.py  activities.py  pyproject.toml  test_activities.py  worker.py  workflows.py
integrations/terraform/: README.md  main.tf
integrations/vercel/: README.md  package.json
integrations/windmill/: README.md  resource-type.json
integrations/zapier/: .env.example  .gitignore  CHANGELOG.md  README.md  authentication.js  index.js  package-lock.json  package.json
playwright-report/: index.html
public/: manifest.json  openapi.json  sw.js
screenshots/: ui-changes-report.json
sdks/cli/: README.md  package.json  tsconfig.json
sdks/go/: README.md  go.mod  okrunit.go
sdks/python/: README.md  pyproject.toml
sdks/python/okrunit/: __init__.py  client.py  types.py
sdks/typescript/: README.md  package.json
src/: instrumentation.ts  middleware.ts  proxy.ts
src/__mocks__/: supabase.ts
src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: client-error-reporter.tsx  error-boundary.tsx  token-action-form.tsx
src/hooks/: use-approvals.ts  use-connections.ts  use-onboarding.ts  use-push-notifications.ts  use-realtime.ts
src/lib/: admin-data.ts  admin-types.ts  app-admin.ts  constants.ts  countries.ts  mfa.ts  org-context.ts  redirect.ts  sanitize.ts
src/stores/: approval-filters-store.ts  notification-store.ts  onboarding-tour-store.ts  sidebar-store.ts
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_initial_schema.sql  20260220152713_fix_handle_new_user_search_path.sql  20260221000000_multi_org_support.sql  20260222000000_oauth_support.sql  20260223000000_oauth_client_logo.sql  20260311000000_webhook_tester.sql  20260311100000_action_types_and_assigned_approvers.sql  20260312000000_teams_and_permissions.sql  20260312100000_app_admin.sql  20260315000000_approval_flows.sql  20260315100000_allow_null_connection_id.sql  20260317100000_archive_support.sql  (+60 more)
test-results/: .last-run.json
(+620 files in other folders)
