[project]
name = "okrunit-autogen"
version = "0.1.0"
description = "AutoGen function tool for OKRunit human-in-the-loop approval gates"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat>=0.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["okrunit_autogen"]
exclude = ["test_*", "__pycache__"]

[tool.hatch.build.targets.sdist]
exclude = ["test_*", "__pycache__"]
