[project]
name = "okrunit-crewai"
version = "0.1.0"
description = "CrewAI tool for OKRunit human-in-the-loop approval gates"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["okrunit_crewai"]
exclude = ["test_*", "__pycache__"]

[tool.hatch.build.targets.sdist]
exclude = ["test_*", "__pycache__"]
