[project]
name = "dagster-okrunit"
version = "0.1.0"
description = "Dagster resource, ops, and sensors for OKRunit human-in-the-loop approval gates"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["test_*", "__pycache__"]

[tool.hatch.build.targets.sdist]
exclude = ["test_*", "__pycache__"]
