[project]
name = "okrunit-langchain"
version = "0.1.0"
description = "LangChain/LangGraph tool for OKRunit human-in-the-loop approval gates"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["okrunit_langchain"]
exclude = ["test_*", "__pycache__"]

[tool.hatch.build.targets.sdist]
exclude = ["test_*", "__pycache__"]
