[project]
name = "prefect-okrunit"
version = "0.1.0"
description = "Prefect tasks and flows for OKRunit human-in-the-loop approval gates"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "prefect>=3.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
