[project]
name = "okrunit-temporal"
version = "0.1.0"
description = "Temporal workflows for OKRunit human-in-the-loop approval gates"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
